kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops-project
  annotations:
   spec.ingressClassName: "traefik"
spec:
  rules:
    -  host: devops-project.com
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
                 name: app-svc
                 port:
                   number: 8080
